# Smart_Expense_Tracker

./: .gitattributes  .gitignore  AI_PIPELINE_README.md  AI_PIPELINE_TROUBLESHOOTING.md  MOBILE_APP_SUMMARY.md  MOBILE_SUCCESS.md  MOBILE_VOICE_SETUP.md  QUICK_FIX.bat  README.md  START.bat  cleanup_project.py  exclude.txt  fix_firewall.bat  fix_network_access.bat  package-lock.json  pyproject.toml  setup_ai_pipeline.bat  setup_and_start.bat  setup_demo_data.bat  setup_mobile_connection.bat  setup_mobile_voice.bat  start_backend.bat  start_backend.py  start_backend_local.bat  start_backend_mobile.bat  start_backend_optimized.bat  start_backend_simple.bat  start_complete_offline.bat  start_frontend.bat  start_mobile_backend.bat  start_offline.bat  test_backend.py  test_connection.py  test_db_connection.py  test_mobile_connection.bat  test_voice_fix.py  test_voice_mobile.py
backend/: MODEL_ACCURACY_REPORT.md  MODEL_IMPROVEMENT_GUIDE.md  add_sample_transactions.py  add_user_id.py  check_app.py  check_backend.py  check_model_sequence.py  check_mysql_db.py  clear_data.py  create_demo_user.py  debug_login.py  debug_models.py  debug_voice_text.py  evaluate_minilm_accuracy.py  fix_database.py  fix_login_issues.py  fix_sklearn_version.py  fix_sqlalchemy.py  improve_models.py  init_db.py  install_audio_deps.py  migrate_db.py  performance_config.py  pyproject.toml  requirements.txt  requirements_complete.txt  requirements_minimal.txt  reset_user_password.py  setup_ai_pipeline.py  start_fixed.py  start_minimal.py  start_optimized.py  start_server_fixed.py  start_server_simple.py  start_simple.py  test_ai.py  test_backend.py  test_category_model.py  test_complete_pipeline.py  test_direct.py  (+11 more)
backend/alembic/: env.py
backend/app/: budget_crud.py  config.py  crud.py  database.py  db_base.py  goal_crud.py  main.py  models.py  networth_crud.py  schemas.py  security.py  summary_crud.py  user_crud.py
backend/services/: ai_processor.py  ai_processor_enhanced.py  ai_processor_final.py  ai_processor_fixed.py  ai_processor_improved.py  ai_processor_local.py  ai_processor_local_only.py  ai_processor_offline.py  (+2 more)
(+150 files in other folders)
